template new instance compatible with java16